# protobuf2json-c

./: .gitignore  .travis.before_install.sh  .travis.yml  CHANGES.md  LICENSE  Makefile.am  README.md  autogen.sh  common.gypi  configure.ac  protobuf2json-c.gyp
include/: protobuf2json.h
m4/: acinclude.m4  gcov.m4  my_coverage.m4  my_sanitize.m4  my_valgrind.m4
src/: Makefile.am  base64.h  bitmap.h  jansson_compat.h  protobuf2json.c  protobuf2json.h
test/: .gitignore  Makefile.am  bar.proto  benchmark-dummy.c  benchmark-list.h  failed-alloc-helper.h  getrusage-helper.h  good.json  list.proto  person.proto  run-benchmarks.c  run-tests.c  run-tmp.c  runner-unix.c  runner-win.c  runner.c  runner.h  task.h  test-dummy.c  test-json2protobuf-file.c  test-json2protobuf-person.c  test-json2protobuf-string.c  test-json2protobuf.c  test-list.h  test-protobuf2json-bar.c  test-protobuf2json-file.c  test-protobuf2json-person.c  test-protobuf2json-string.c  test-protobuf2json.c  test-reversible.c  test.proto
test/fixtures/: bad_message.json
